<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    android:fitsSystemWindows="true"
    tools:ignore="ResourceName">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/white"
        app:elevation="@dimen/dp_0"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/mCtlWebTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:titleEnabled="false">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/transparent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/app_name">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_30">
                    <ImageView
                        android:id="@+id/mIvBack"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="@dimen/dp_20"
                        android:src="@mipmap/ic_one_key_login_back"/>
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_45"
        android:paddingTop="@dimen/dp_60"
        android:paddingRight="@dimen/dp_45"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/login_verification_code_login"
            android:textColor="@color/color_060D11"
            android:textSize="@dimen/dp_54"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/mEtPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_84"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            android:layout_marginTop="@dimen/dp_100"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/login_enter_phone_tip"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/color_060D11"
            android:textSize="@dimen/dp_40"
            tools:text="18025460000" />

        <View
            android:id="@+id/line_phone"
            style="@style/base_line_horizontal"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mEtPhone"/>

        <EditText
            android:id="@+id/mEtCode"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_84"
            app:layout_constraintTop_toBottomOf="@+id/line_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mTvTime"
            android:layout_marginTop="@dimen/dp_40"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/login_enter_verification_code"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/color_060D11"
            android:textSize="@dimen/dp_40" />

        <TextView
            android:id="@+id/mTvTime"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_84"
            app:layout_constraintEnd_toStartOf="@+id/mTvSendSms"
            app:layout_constraintTop_toTopOf="@+id/mEtCode"
            app:layout_constraintBottom_toBottomOf="@+id/mEtCode"
            android:layout_marginEnd="@dimen/dp_5"
            android:gravity="center"
            android:textColor="@color/color_CD0000"
            android:textSize="@dimen/dp_32"
            tools:text="40s" />

        <TextView
            android:id="@+id/mTvSendSms"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_84"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mEtCode"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/login_get_verification_code"
            android:textColor="@color/color_060D11"
            android:textSize="@dimen/dp_32" />

        <View
            android:id="@+id/line_code"
            style="@style/base_line_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mEtCode"/>

        <Button
            android:id="@+id/mBtnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_90"
            app:layout_constraintTop_toBottomOf="@+id/line_code"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_120"
            android:layout_marginRight="@dimen/dp_30"
            android:background="@drawable/bg_f5eeeeee_shape_radius_10"
            android:text="@string/login_login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_40" />

        <View
            android:id="@+id/line_start"
            style="@style/base_line_horizontal"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_DDDDDD"
            app:layout_constraintBottom_toBottomOf="@+id/tv_other"
            app:layout_constraintEnd_toStartOf="@+id/tv_other"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_other" />

        <TextView
            android:id="@+id/tv_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/line_end"
            app:layout_constraintStart_toEndOf="@+id/line_start"
            app:layout_constraintTop_toBottomOf="@+id/mBtnLogin"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_40"
            android:text="@string/login_other_login_way"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/dp_26" />

        <View
            android:id="@+id/line_end"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_DDDDDD"
            app:layout_constraintBottom_toBottomOf="@+id/tv_other"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_other"
            app:layout_constraintTop_toTopOf="@+id/tv_other" />

        <TextView
            android:id="@+id/mTvOneKeyLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginEnd="@dimen/dp_40"
            android:drawableTop="@mipmap/ic_sms_login_focus"
            android:drawablePadding="@dimen/dp_20"
            android:text="@string/login_one_key_login"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/dp_24"
            app:layout_constraintEnd_toStartOf="@+id/line_center"
            app:layout_constraintTop_toBottomOf="@+id/tv_other" />

        <View
            android:id="@+id/line_center"
            android:layout_width="@dimen/dp_1"
            android:layout_height="10dp"
            app:layout_constraintTop_toTopOf="@+id/mTvOneKeyLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/mTvWechatLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/mTvOneKeyLogin"
            app:layout_constraintStart_toEndOf="@+id/line_center"
            android:layout_marginStart="@dimen/dp_40"
            android:drawableTop="@mipmap/ic_wx_login_focus"
            android:drawablePadding="@dimen/dp_20"
            android:text="@string/login_wechat_login"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/dp_24" />

        <CheckBox
            android:id="@+id/mChkCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/dp_130"
            android:layout_marginStart="@dimen/dp_50"
            android:button="@drawable/chk_login_user_agreement_selector"
            android:padding="@dimen/dp_10"/>

        <TextView
            android:id="@+id/mTvPrivacyAgreement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mChkCheck"
            app:layout_constraintTop_toTopOf="@+id/mChkCheck"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_50"
            android:text="@string/login_agreement"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/dp_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>